<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/ss_Color_primary">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/ttl_skull"
        android:text="@string/loader_name"
        android:textColor="@color/textColorThirdly"
        android:textSize="28dp"
        android:fontFamily="@font/araboto_bold400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_function_layout"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ttl_skull">

        <include layout="@layout/error_screen"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_layout"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/error_function_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/refreshProgress"
                android:layout_gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/refresing"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14dp"
                android:id="@+id/progress_tint_txt"
                android:textColor="@color/textColorSecondly"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
    </RelativeLayout>

    <com.github.matteobattilana.weather.WeatherView
        android:id="@+id/weather_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/announcement_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/material"
        app:layout_constraintTop_toBottomOf="@+id/refresh_layout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ss_Color_Secondly"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:id="@+id/announcement_title"
                android:fontFamily="@font/araboto_bold400"
                android:text="@string/announcement"
                android:textColor="@color/textColorPrimary"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/announcements"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/textColorSecondly"
                android:textSize="15dp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/updates_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="10dp"
        android:background="@drawable/material"
        app:layout_constraintTop_toBottomOf="@+id/announcement_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            android:id="@+id/updateInfoT"
            android:fontFamily="@font/neue"
            android:text="@string/hack_info"
            android:textColor="@color/textColorThirdly"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:id="@+id/txtDataUpdated"
                android:visibility="gone"
                android:text="@string/datawas"
                android:textColor="@color/textColorThirdly"
                android:textSize="13dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:id="@+id/data_was_updated"
                android:visibility="gone"
                android:text="@string/data_update_time"
                android:textColor="@color/textColorThirdly"
                android:textSize="13dp" />
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/hackSelections"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/updates_info">

        <include layout="@layout/plug_hack_selection"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/customeUpdate_layout"
        android:gravity="start"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="3dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/safe"
                android:textSize="14dp"
                android:text="@string/customized" />

            <TextView
                android:id="@+id/CustomURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/safe"
                android:text="@string/adddr_example"
                android:textSize="12dp" />
        </LinearLayout>

        <Button
            android:id="@+id/customLinkReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginRight="3dp"
            android:text="@string/reset" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>