<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/ss_Color_primary">


    <com.github.matteobattilana.weather.WeatherView
        android:id="@+id/weather_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_layout"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/error_function_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_bar"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/refreshProgress"
                android:layout_gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/refresing"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14dp"
                android:id="@+id/progress_tint_txt"
                android:textColor="@color/textColorSecondly"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_function_layout"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ttl_skull">

        <include layout="@layout/error_screen"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/mainUpdateLayout"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/updateLog"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Update Log:"
                    android:textColor="#ffffffff"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/update_info_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/textColorSecondly"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_materials"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/download_loader"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/material"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/txtDownloadAndInstall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="@string/downloadandinstall"
                            android:textColor="#FF00FFE6"
                            android:textSize="23dp" />

                        <TextView
                            android:id="@+id/upcomingVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15.0dip"
                            android:layout_toRightOf="@id/txtDownloadAndInstall"
                            android:gravity="center"
                            android:textColor="#FF00FFE6"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_materials"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/continue_with_current_version"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/material"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/continue_With_Current_loader_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="@string/con_with_curr_version"
                            android:textColor="#FFFF0000"
                            android:textSize="23dp" />

                        <TextView
                            android:id="@+id/current_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15.0dip"
                            android:layout_toRightOf="@id/continue_With_Current_loader_TXT"
                            android:gravity="center"
                            android:textColor="#FFFF0000"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:id="@+id/update_loader_error_info"/>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Loader version: %s Upcoming version: %s"
                android:textAlignment="4"
                android:textColor="#C0C0C0"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>